# MinimalResolution

./: .gitignore  BP_compile  BPtable_compile  CMakeLists.txt  Fp.h  Qp.cpp  Qp.h  README.md  Z2.h  algNov.cpp  ctau_steenrod.cpp  curtis.h  e2p_compile  ex_compile  ex_exponents.cpp  ex_exponents.h  ex_index.h  exponents.cpp  hi_test.cpp  kos_compile  lift.h  matrices_stream.h  mon_index.h  mot_comb_compile  mot_compile  mot_main.cpp  mot_mult.cpp  mot_steenrod.cpp  mottable_compile  multiplication.cpp  st_compiling  steenrod.cpp  streams.cpp  streams.h  tau_mult_compile  tauboc_compile  yoneda.cpp  yoneda_products.tex  yoneda_table.py
hopf_algebroid/: 11.h  6.h
modules/: 10.h  2.h
polynomial/: 2.h
